# format

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  args.cpp.erb  fast.cpp.erb  fmt_1.cpp.erb  fmt_args.cpp.erb  handy.cpp.erb  my.cpp.erb  pprintf.cpp.erb
benchmark/dependencies/: pprintf.cmake
example/: CMakeLists.txt  main.cpp
include/: format.hpp
runtime/: CMakeLists.txt  runtime.cpp
test/: CMakeLists.txt  format_test.cpp
